--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,17 @@
-/* styles go here */
+
+.field-form {
+  display: block;
+  margin-bottom: 10px;
+}
+
+fieldset {
+  margin: 20px 0;
+}
+
+.field-for.last-field {
+  margin: 0;
+}
+
+.first_fieldset {
+  margin-top: 0;
+}
